Template documentation website up ready to be filled

--- a/dev.html
+++ b/dev.html
@@ -23,9 +23,8 @@
           <ul>
             <li style="display: inline"><a href="show.html" class="nav-list">Showcase</a></li>
             <li style="display: inline"><a href="collab.html" class="nav-list">Collaborate</a></li>
-            <li style="display: inline"><a href="" class="nav-list onpage">Documentation</a></li>
-            <li style="display: inline"><a href="dev.html" class="nav-list">Development</a></li>
-            <li style="display: inline"><a href="ref.html" class="nav-list">References</a></li>
+            <li style="display: inline"><a href="docs.html" class="nav-list">Documentation</a></li>
+            <li style="display: inline"><a href="" class="nav-list onpage">Development</a></li>
             <li style="display: inline"><a href="forum.html" class="nav-list">Forum</a></li>
           </ul>
         </div>
@@ -36,8 +35,8 @@
     <div class="pageheader">
       <div class="container">
         <div>
-          <h1 style="color: #f60">Documentation</h1>
-          <p class="pageblurb">Some appropriate graphics and text saying something to the effect of "Documentation and examples for use of both the system and the APIs"</p><br>
+          <h1 style="color: #f60">Development</h1>
+          <p class="pageblurb">Some appropriate graphics and text saying something to the effect of "Development history"</p><br>
         </div>
       </div>
     </div>
@@ -51,9 +50,10 @@
             <div class="affix-top" id="sidebar" data-spy="affix">
                 <ul class="nav hidden-xs hidden-sm">
                   <li style="background-color: #1b1b1b; padding-top: 10px; border-top-left-radius: 10px; border-top-right-radius: 10px; border: 1px #eee solid"><span style="padding: 16px; color: #fff">Navigation</span><p></li>
-                  <li><a href="#network">Building the Network</a></li>
-                  <li><a href="#webapi">Web API</a></li>
-                  <li><a href="#javaapi">Java API</a></li>
+                  <li><a href="#team">The Team</a></li>
+                  <li><a href="#management">Project Management</a></li>
+                  <li><a href="#timeline">Development Timeline</a></li>
+                  <li><a href="#refs">References</a></li>
                 </ul>
             </div>
           </div>
@@ -61,35 +61,38 @@
           <!-- MAIN CONTENT -->
           <div class="col-md-9 nopadding main-content">
 
-            <!-- Sensors website -->
-            <h2>Building the Orange Sensors Network</h2>
-            <a class="anchor" id="network"></a>
+            <!-- The Team -->
+            <h2>The Team</h2>
+            <a class="anchor" id="team"></a>
             <hr>
             <ul>
-              <li>Short guide on website registration, how to add sensors, remove them etc.</li>
-              <li>Includes all details regarding how to configure hardware to work with the system</li>
+              <li>Details about each of us and our positions on the team (photos this time..?)</li>
             </ul>
 
-            <!-- Node.js API -->
-            <h2>Orange Sensors Web API</h2>
-            <a class="anchor" id="webapi"></a>
+            <!-- Project Management -->
+            <h2>Project Management</h2>
+            <a class="anchor" id="management"></a>
             <hr>
             <ul>
-              <li>All documentation and guidelines for using the Node.js API</li>
-              <li>Along with examples, if possible</li>
+              <li>How we've managed ourselves</li>
+              <li>List of who did what</li>
+              <li>If we're uploading the biweeklys, they should go here</li>
             </ul>
 
-            <!-- Java API -->
-            <h2>Orange Sensors Java API</h2>
-            <a class="anchor" id="javaapi"></a>
+            <!-- Development Timeline -->
+            <h2>Development Timeline</h2>
+            <a class="anchor" id="timeline"></a>
             <hr>
             <ul>
-              <li>All documentation and guidelines for using the Java API</li>
-              <li>Along with examples</li>
+              <li>Forks in prototypes, important decisions we made along the way and why...</li>
             </ul>
-
+            
+            <!-- References -->
+            <h2>References</h2>
+            <a class="anchor" id="refs"></a>
+            <hr>
             <ul>
-              <li>eeee</li>
+              <li>A list of any and all references we used, probably shorter than last time because this is less researchy</li>
             </ul>
           </div>
         </div>
