Added a new site and made some minor changes to template

--- a/demo.html
+++ b/demo.html
@@ -22,9 +22,9 @@
         <div class="nav" id="topnav">
           <ul>
             <li style="display: inline"><a href="show.html" class="nav-list">Showcase</a></li>
-            <li style="display: inline"><a href="demo.html" class="nav-list">Demonstration</a></li>
+            <li style="display: inline"><a href="" class="nav-list onpage">Demonstration</a></li>
             <li style="display: inline"><a href="collab.html" class="nav-list">Collaborate</a></li>
-            <li style="display: inline"><a href="" class="nav-list onpage">Documentation</a></li>
+            <li style="display: inline"><a href="docs.html" class="nav-list">Documentation</a></li>
             <li style="display: inline"><a href="dev.html" class="nav-list">Development</a></li>
             <li style="display: inline"><a href="forum.html" class="nav-list">Forum</a></li>
           </ul>
@@ -36,8 +36,8 @@
     <div class="pageheader">
       <div class="container">
         <div>
-          <h1 style="color: #f60">Documentation</h1>
-          <p class="pageblurb">Some appropriate graphics and text saying something to the effect of "Documentation and examples for use of both the system and the APIs"</p><br>
+          <h1 style="color: #f60">Demonstration</h1>
+          <p class="pageblurb">Some appropriate graphics and text saying something to the effect of "See our system in action through our Smart Parking app"</p><br>
         </div>
       </div>
     </div>
@@ -51,9 +51,11 @@
             <div class="affix-top" id="sidebar" data-spy="affix">
                 <ul class="nav hidden-xs hidden-sm">
                   <li style="background-color: #1b1b1b; padding-top: 10px; border-top-left-radius: 10px; border-top-right-radius: 10px; border: 1px #eee solid"><span style="padding: 16px; color: #fff">Navigation</span><p></li>
-                  <li><a href="#network">Building the Network</a></li>
-                  <li><a href="#webapi">Web API</a></li>
-                  <li><a href="#javaapi">Java API</a></li>
+                  <li><a href="#final">Final Product</a></li>
+                  <li><a href="#design">Design</a></li>
+                  <li><a href="#javaapi">Using the Java API for analytics</a></li>
+                  <li><a href="#analytics">Running analytics</a></li>
+                  <li><a href="#simulator">Simulating Sensors</a></li>
                 </ul>
             </div>
           </div>
@@ -61,31 +63,42 @@
           <!-- MAIN CONTENT -->
           <div class="col-md-9 nopadding main-content">
 
-            <!-- Sensors website -->
-            <h2>Building the Orange Sensors Network</h2>
-            <a class="anchor" id="network"></a>
+            <!-- Final Product -->
+            <h2>Final Product</h2>
+            <a class="anchor" id="final"></a>
             <hr>
             <ul>
-              <li>Short guide on website registration, how to add sensors, remove them etc.</li>
-              <li>Includes all details regarding how to configure hardware to work with the system</li>
+              <li>Basically just a link to the /parking/ website with a brief description</li>
             </ul>
 
-            <!-- Node.js API -->
-            <h2>Orange Sensors Web API</h2>
-            <a class="anchor" id="webapi"></a>
+            <!-- Design -->
+            <h2>Design</h2>
+            <a class="anchor" id="design"></a>
             <hr>
             <ul>
-              <li>All documentation and guidelines for using the Node.js API</li>
-              <li>Along with examples, if possible</li>
+              <li>A high-level diagram of the backend design</li>
+              <li>Will include talking about the databases</li>
+              <li>Brief description of how to achieve it</li>
             </ul>
-
+            
             <!-- Java API -->
-            <h2>Orange Sensors Java API</h2>
+            <h2>Using the Java API for analytics</h2>
             <a class="anchor" id="javaapi"></a>
             <hr>
             <ul>
-              <li>All documentation and guidelines for using the Java API</li>
-              <li>Along with examples</li>
+              <li>Details about how the Java API was used to retrieve data</li>
+              <li>Details about the analytics performed on the data</li>
+              <li>Code samples</li>
+            </ul>
+            
+            <!-- Simulator -->
+            <h2>Simulating Sensors</h2>
+            <a class="anchor" id="simulator"></a>
+            <hr>
+            <ul>
+              <li>Details about the sensor simulator</li>
+              <li>Code samples</li>
+              <li>Download link for sample simulator code</li>
             </ul>
 
           </div>
