--- a/dev.html
+++ b/dev.html
@@ -22,6 +22,7 @@
         <div class="nav" id="topnav">
           <ul>
             <li style="display: inline"><a href="show.html" class="nav-list">Showcase</a></li>
+            <li style="display: inline"><a href="demo.html" class="nav-list">Demonstration</a></li>
             <li style="display: inline"><a href="collab.html" class="nav-list">Collaborate</a></li>
             <li style="display: inline"><a href="docs.html" class="nav-list">Documentation</a></li>
             <li style="display: inline"><a href="" class="nav-list onpage">Development</a></li>
