--- a/show.html
+++ b/show.html
@@ -22,6 +22,7 @@
         <div class="nav" id="topnav">
           <ul>
             <li style="display: inline"><a href="" class="nav-list onpage">Showcase</a></li>
+            <li style="display: inline"><a href="demo.html" class="nav-list">Demonstration</a></li>
             <li style="display: inline"><a href="collab.html" class="nav-list">Collaborate</a></li>
             <li style="display: inline"><a href="docs.html" class="nav-list">Documentation</a></li>
             <li style="display: inline"><a href="dev.html" class="nav-list">Development</a></li>
@@ -101,28 +102,57 @@ public static void main(String[] args)
             </table>
             <div class="imgborder">
               <img class="img-responsive img-rounded" src="img/cat.jpg">
-              <p>A photo of a cat named Claude. This is a far longer caption than necessary, but I'm writing it to test that the wrapping and actual pagagraph element of it is okay, because i just put hte line height up to 40 which should really mean the lines are super spaced out when really i just want a larger margin between the photo and the caption. This is a poor way of doing it.</p>
+              <p>A photo of a cat named Claude. This is basically just an image caption</p>
             </div>
 
             <!-- Sepcification and Design -->
             <h2>Specification and Design</h2>
             <a class="anchor" id="spec"></a>
             <hr>
+            <ul>
+              <li>The high-level design of the system (basic illustrations of how it works)</li>
+              <li>Functional requirements/specification points extracted from the core requirements given above</li>
+            </ul>
 
             <!-- Architectural Diagrams -->
             <h2>Architectural Diagrams</h2>
             <a class="anchor" id="arch"></a>
             <hr>
+            <ul>
+              <li>More detailed illustrations of the system components, with labels and diagrams as necessary</li>
+              <li>Diagrams of the sensor hardware we used, with a link to the guide (in docs.html) possibly</li>
+            </ul>
 
             <!-- Implementation and Technical Achievements -->
             <h2>Implementation and Technical Achievements</h2>
             <a class="anchor" id="imp"></a>
             <hr>
+            <ul>
+              <li>Hardware: 
+                <ul>
+                  <li>The hardware we used</li>
+                  <li>How we put it together</li>
+                  <li>Details of the firmware</li>
+                </ul>
+              </li>
+              <li>Software:
+                <ul>
+                  <li>System backend software and what it does, how it works</li>
+                  <li>Registration website</li>
+                  <li>Java API</li>
+                  <li>Node API</li>
+                </ul>
+              </li>
+            </ul>
 
             <!-- Testing and Evaluation -->
             <h2>Testing and Evaluation</h2>
             <a class="anchor" id="test"></a>
             <hr>
+            <ul>
+              <li>Hardware testing</li>
+              <li>Software testing (JUnit tests etc.)</li>
+            </ul>
           </div>
         </div>
       </div>
