--- a/ref.html
+++ b/ref.html
@@ -22,10 +22,10 @@
         <div class="nav" id="topnav">
           <ul>
             <li style="display: inline"><a href="show.html" class="nav-list">Showcase</a></li>
+            <li style="display: inline"><a href="demo.html" class="nav-list">Demonstration</a></li>
             <li style="display: inline"><a href="collab.html" class="nav-list">Collaborate</a></li>
             <li style="display: inline"><a href="docs.html" class="nav-list">Documentation</a></li>
             <li style="display: inline"><a href="dev.html" class="nav-list">Development</a></li>
-            <li style="display: inline"><a href="" class="nav-list onpage">References</a></li>
             <li style="display: inline"><a href="forum.html" class="nav-list">Forum</a></li>
           </ul>
         </div>
