--- a/docs.html
+++ b/docs.html
@@ -22,7 +22,7 @@
         <div class="nav" id="topnav">
           <ul>
             <li style="display: inline"><a href="show.html" class="nav-list">Showcase</a></li>
-            <li style="display: inline"><a href="demo.html" class="nav-list">Demonstration</a></li>
+            <li style="display: inline"><a href="demo.html" class="nav-list">Demo</a></li>
             <li style="display: inline"><a href="collab.html" class="nav-list">Collaborate</a></li>
             <li style="display: inline"><a href="" class="nav-list onpage">Documentation</a></li>
             <li style="display: inline"><a href="dev.html" class="nav-list">Development</a></li>
